--- a/html/home.html
+++ b/html/home.html
@@ -135,12 +135,12 @@
             Developers
         </h2>
         <div class="developerdiv">
-            <img src="/img/mypics.jpeg" alt="Developer Image">
+            <img src="/img/kcoder.jpg" alt="Developer Image">
             <div class="info">
-                <h3>Dan Goodnews</h3>
-                <h5>FrontEnd Developer</h5>
-                <p>Email: youngicthub@gmail.com</p>
-                <p>Phone: +234 813 007 8945</p>
+                <h3>Mbanusi Ebuka (Kcoder)</h3>
+                <h5>Backend Developer</h5>
+                <p>Email: frankemmanuel249@gmail.com</p>
+                <p>Phone: +234 907 119 5594</p>
             </div>
         </div>
 
